; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtlwifi/rtl8192ce/extr_trx.c_rtl92ce_is_tx_desc_closed.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtlwifi/rtl8192ce/extr_trx.c_rtl92ce_is_tx_desc_closed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_hw = type { i32 }
%struct.rtl_pci = type { %struct.rtl8192_tx_ring* }
%struct.rtl8192_tx_ring = type { i64, i32* }

@HW_DESC_OWN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rtl92ce_is_tx_desc_closed(%struct.ieee80211_hw* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ieee80211_hw*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.rtl_pci*, align 8
  %9 = alloca %struct.rtl8192_tx_ring*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i64, align 8
  store %struct.ieee80211_hw* %0, %struct.ieee80211_hw** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %12 = load %struct.ieee80211_hw*, %struct.ieee80211_hw** %5, align 8
  %13 = call i32 @rtl_pcipriv(%struct.ieee80211_hw* %12)
  %14 = call %struct.rtl_pci* @rtl_pcidev(i32 %13)
  store %struct.rtl_pci* %14, %struct.rtl_pci** %8, align 8
  %15 = load %struct.rtl_pci*, %struct.rtl_pci** %8, align 8
  %16 = getelementptr inbounds %struct.rtl_pci, %struct.rtl_pci* %15, i32 0, i32 0
  %17 = load %struct.rtl8192_tx_ring*, %struct.rtl8192_tx_ring** %16, align 8
  %18 = load i64, i64* %6, align 8
  %19 = getelementptr inbounds %struct.rtl8192_tx_ring, %struct.rtl8192_tx_ring* %17, i64 %18
  store %struct.rtl8192_tx_ring* %19, %struct.rtl8192_tx_ring** %9, align 8
  %20 = load %struct.rtl8192_tx_ring*, %struct.rtl8192_tx_ring** %9, align 8
  %21 = getelementptr inbounds %struct.rtl8192_tx_ring, %struct.rtl8192_tx_ring* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  %23 = load %struct.rtl8192_tx_ring*, %struct.rtl8192_tx_ring** %9, align 8
  %24 = getelementptr inbounds %struct.rtl8192_tx_ring, %struct.rtl8192_tx_ring* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = getelementptr inbounds i32, i32* %22, i64 %25
  %27 = bitcast i32* %26 to i64*
  store i64* %27, i64** %10, align 8
  %28 = load %struct.ieee80211_hw*, %struct.ieee80211_hw** %5, align 8
  %29 = load i64*, i64** %10, align 8
  %30 = load i32, i32* @HW_DESC_OWN, align 4
  %31 = call i32 @rtl92ce_get_desc(%struct.ieee80211_hw* %28, i64* %29, i32 1, i32 %30)
  %32 = sext i32 %31 to i64
  store i64 %32, i64* %11, align 8
  %33 = load i64, i64* %11, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %37

36:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %37

37:                                               ; preds = %36, %35
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local %struct.rtl_pci* @rtl_pcidev(i32) #1

declare dso_local i32 @rtl_pcipriv(%struct.ieee80211_hw*) #1

declare dso_local i32 @rtl92ce_get_desc(%struct.ieee80211_hw*, i64*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
